# colt-structs

./: .gitignore  CMakeLists.txt  README.md
include/: main.cpp
include/colt/: Enum.h  Expected.h  Hash.h  Iterators.h  List.h  Map.h  Optional.h  Reflection.h  Set.h  String.h  UniquePtr.h  Vector.h  View.h  algorithm.h  allocator.h  char.h  common.h  expected.h  multimap.h  optional.h  string.h  unique_ptr.h  vector.h  view.h
include/colt/data_structs/: Expected.h  List.h  Map.h  Optional.h  Set.h  String.h  UniquePtr.h  Vector.h  View.h
include/colt/details/: algorithm.h  allocator.h  char.h  common.h  linear_probing.h  uninitialized_array.h
include/colt/refl/: Enum.h  Reflection.h
include/colt/utility/: Assert.h  Hash.h  Iterators.h  Typedefs.h
testing/: main.cpp
testing/SmallVector/: SmallVector.cpp  copyConstructor.cpp  isStackAllocated.cpp  pushBack.cpp
